kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authentik
    gethomepage.dev/description: Single Sign-On
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: authentik.png
    gethomepage.dev/href: https://auth.kalde.in
spec:
  hostnames:
    - auth.kalde.in
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
